complete task updating is working

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,12 +22,13 @@
     </div>
 
     <div id="outputDiv">
-        <h2>Tasks:</h2>
+        <!-- <h2 id="tasksHeader">Tasks:</h2> -->
         <table>
             <thead>
                 <tr>
                     <th>Task</th>
                     <th>Complete</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody id="taskOut">
