--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
     <title>Weekend To Do List</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="vendors/bootstrap.min.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="vendors/JQuery Code.js"></script>
     <script src="scripts/client.js"></script>
 </head>
